Remove references to jdk.incubator.foreign module